--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@
 }
 
 html {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Mukta", sans-serif;
+    scroll-behavior: smooth;
 }
 
 /* 
