--- a/css/style.css
+++ b/css/style.css
@@ -10,18 +10,163 @@
 html {
     font-family: "Mukta", sans-serif;
     scroll-behavior: smooth;
+    overflow: hidden;
 }
 
 /* 
     GENERAL
 */
-.container {
-    max-width: 1000px;
-    margin: 0 auto;
+
+.row {
+    display: flex;
 }
 
+.col-1-6 {
+    width: 15%;
+}
+
+/* DESKTOP FIRST */
+
+
+
+
+/* 
+    HEADER
+*/
+
+header .top-banner {
+    width: calc(100% - 200px);
+    margin-left: 200px;
+    height: 100px;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+}
+
+/* 
+    MAIN
+*/
+#main-container {
+    width: 100%;
+    overflow-y: auto;
+}
+
+.main-section {
+    margin-left: 200px;
+    min-height: calc(100vh - 150px);
+
+
+
+}
+
+.main-section .row {
+    flex-wrap: wrap;
+
+
+}
+
+/* 
+    SIDE- NAV-BAR
+*/
+
+.row.aside {
+    height: calc(100vh);
+}
+
+.side-nav {
+    width: 200px;
+    height: calc(100vh);
+    padding-top: 20px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+}
+
+.side-nav a {
+    color: white;
+    text-decoration: none;
+    display: block;
+    padding: 10px;
+}
+
+.side-nav ul {
+    list-style: none;
+
+}
+
+.side-nav ul li {
+    margin: 20px 0;
+}
+
+.side-nav ul li a {
+    color: white;
+    text-decoration: none;
+    display: block;
+    padding: 10px;
+
+}
+
+
+/* 
+    FOOTER- TOOL BAR
+*/
+
+footer {
+    width: 100%;
+    height: 150px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 2;
+}
+
+/* RESPONSIVE */
+
+@media screen and (max-width: 1100px) {}
+
+@media screen and (max-width: 700px) {}
+
+@media screen and (max-width: 600px) {}
+
 /* DEBUG */
-/* .debug {
+
+.debug header .top-banner {
+
+    background-color: rgba(0, 66, 10, 0.5);
+}
+
+.debug main {
+
+    background-color: bisque;
+}
+
+.debug .main-section {
+    background-color: palevioletred;
+    border: 3px dashed red;
+
+}
+
+.debug main {
+
     background-color: lightcoral;
-    min-height: 200px;
-} */
+
+}
+
+.debug footer {
+
+    background-color: aqua;
+
+}
+
+.debug .col-1-6 {
+    min-height: 150px;
+    background-color: blue;
+    border: 3px dashed beige;
+}
+
+.debug .side-nav {
+
+    background-color: orange;
+
+}
