--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,11 @@ header .top-banner {
 /* 
     MAIN
 */
+
+.aside .mobile-nav {
+    display: none;
+}
+
 #main-container {
     width: 100%;
     overflow-y: auto;
@@ -127,7 +132,30 @@ footer {
 
 @media screen and (max-width: 700px) {}
 
-@media screen and (max-width: 600px) {}
+@media screen and (max-width: 600px) {
+    .side-nav {
+        width: 100px;
+    }
+
+    .aside .mobile-nav {
+        display: block;
+    }
+
+    .aside .desktop-nav {
+        display: none;
+    }
+
+    header .top-banner {
+        width: calc(100% - 100px);
+        margin-left: 100px;
+
+    }
+
+    .main-section {
+        margin-left: 100px;
+
+    }
+}
 
 /* DEBUG */
 
