--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,18 @@ html {
 /* 
     GENERAL
 */
+.mar-bot-20 {
+    margin-bottom: 20px;
+}
+
+.mar-bot-40 {
+    margin-bottom: 40px;
+}
+
+.gray-txt {
+    /* color: #686868; */
+    color: gray;
+}
 
 .row {
     display: flex;
@@ -23,6 +35,14 @@ html {
 
 .col-1-6 {
     width: 15%;
+}
+
+img {
+    max-width: 100%;
+}
+
+a {
+    display: inline-block;
 }
 
 /* DESKTOP FIRST */
@@ -35,8 +55,8 @@ html {
 */
 
 header .top-banner {
-    width: calc(100% - 200px);
-    margin-left: 200px;
+    width: calc(100% - 250px);
+    margin-left: 250px;
     height: 100px;
     position: fixed;
     top: 0;
@@ -57,7 +77,7 @@ header .top-banner {
 }
 
 .main-section {
-    margin-left: 200px;
+    margin-left: 250px;
     min-height: calc(100vh - 150px);
 
 
@@ -78,20 +98,29 @@ header .top-banner {
     height: calc(100vh);
 }
 
+
+
 .side-nav {
-    width: 200px;
+    width: 250px;
     height: calc(100vh);
-    padding-top: 20px;
+    padding: 10px 20px;
+    background-color: black;
+    color: white;
     position: fixed;
     left: 0;
     bottom: 0;
 }
 
 .side-nav a {
-    color: white;
+    color: gray;
     text-decoration: none;
     display: block;
     padding: 10px;
+}
+
+.side-nav ul:first-of-type>li:first-of-type a {
+    color: white;
+
 }
 
 .side-nav ul {
@@ -101,15 +130,54 @@ header .top-banner {
 
 .side-nav ul li {
     margin: 20px 0;
+    display: flex;
+    align-items: center;
+}
+
+.side-nav .nav-add-playlist li i {
+    margin-right: 10px;
+
+
+}
+
+.side-nav .nav-add-playlist li a {
+    display: flex;
+    align-items: center;
+    color: gray;
+
+}
+
+
+.side-nav ul li img {
+    width: 40px;
 }
 
 .side-nav ul li a {
-    color: white;
+    color: gray;
+    font-size: 1.2rem;
+    font-weight: bold;
     text-decoration: none;
     display: block;
-    padding: 10px;
+    padding: 5px;
 
 }
+
+.side-nav .nav-playlist-name a {
+    color: grey;
+}
+
+.side-nav .nav-playlist-container.row {
+    flex-direction: column;
+    max-height: 400px;
+
+}
+
+.side-nav .container.row {
+    flex-direction: column;
+    max-height: 400px;
+    overflow-y: auto;
+}
+
 
 
 /* 
@@ -135,10 +203,23 @@ footer {
 @media screen and (max-width: 600px) {
     .side-nav {
         width: 100px;
+        text-align: center;
+    }
+
+
+    .aside .mobile-nav .main-logo img {
+        width: 40px;
+
+    }
+
+    .mobile-nav ul li a {
+        margin: 0 auto;
+
     }
 
     .aside .mobile-nav {
         display: block;
+
     }
 
     .aside .desktop-nav {
@@ -154,6 +235,10 @@ footer {
     .main-section {
         margin-left: 100px;
 
+    }
+
+    .nav-playlist-container {
+        display: none;
     }
 }
 
@@ -193,8 +278,8 @@ footer {
     border: 3px dashed beige;
 }
 
-.debug .side-nav {
+/* .debug .side-nav {
 
     background-color: orange;
 
-}
+} */
