--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@ html {
     width: 15%;
 }
 
+.col-1-3 {
+    width: calc(100% / 3);
+}
+
 img {
     max-width: 100%;
 }
@@ -85,7 +89,9 @@ header .top-banner {
 }
 
 .main-section .row {
+    justify-content: space-evenly;
     flex-wrap: wrap;
+    /* Sistemare classe col- gestire responsive */
 
 
 }
@@ -194,6 +200,13 @@ footer {
     z-index: 2;
 }
 
+footer .row {
+    justify-content: space-between;
+
+}
+
+
+
 /* RESPONSIVE */
 
 @media screen and (max-width: 1100px) {}
@@ -283,3 +296,11 @@ footer {
     background-color: orange;
 
 } */
+
+
+
+.debug footer .row .col-1-3 {
+    background-color: bisque;
+    border: 3px dashed red;
+    min-height: 150px;
+}
