--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,8 @@ header .top-banner {
 footer {
     width: 100%;
     height: 150px;
+    color: white;
+    background-color: #282828;
     position: fixed;
     bottom: 0;
     right: 0;
@@ -202,6 +204,36 @@ footer {
 
 footer .row {
     justify-content: space-between;
+
+}
+
+footer .row .col-1-3 {
+    padding: 10px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+
+
+}
+
+footer .row .col-1-3>* {
+    margin: 0 10px;
+    /* NON TE LO SCORDARE */
+
+}
+
+footer .row .footer-left img {
+    max-width: 100px;
+
+}
+
+footer .row .col-1-3 .button {
+    display: inline-block;
+    color: white;
+    background-color: #282828;
+
+    margin: 0 10px;
+    /* NON TE LO SCORDARE */
 
 }
 
@@ -279,11 +311,11 @@ footer .row {
 
 }
 
-.debug footer {
+/* .debug footer {
 
     background-color: aqua;
 
-}
+} */
 
 .debug .col-1-6 {
     min-height: 150px;
@@ -300,7 +332,7 @@ footer .row {
 
 
 .debug footer .row .col-1-3 {
-    background-color: bisque;
+
     border: 3px dashed red;
-    min-height: 150px;
+
 }
