--- a/css/style.css
+++ b/css/style.css
@@ -16,361 +16,255 @@ html {
 /* 
     GENERAL
 */
-.mar-bot-20 {
-    margin-bottom: 20px;
+
+:root {
+    --lower-height: 100px;
+    --aside-width: 200px;
 }
 
-.mar-bot-40 {
-    margin-bottom: 40px;
+body {
+    color: white;
 }
 
-.gray-txt {
-    /* color: #686868; */
-    color: gray;
-}
-
-.row {
-    display: flex;
-}
-
-.col-1-6 {
-    width: 15%;
-}
-
-.col-1-3 {
-    width: calc(100% / 3);
+.container {
+    padding: 0 10px;
 }
 
 img {
     max-width: 100%;
 }
 
-a {
-    display: inline-block;
-}
-
-/* DESKTOP FIRST */
-
-
-
-
-/* 
-    HEADER
-*/
-
-header .top-banner {
-    width: calc(100% - 250px);
-    margin-left: 250px;
-    height: 100px;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    text-align: right;
-    line-height: 100px;
-    vertical-align: middle;
-    position: fixed;
-    top: 0;
-    z-index: 1;
-}
-
-/* 
-    MAIN
-*/
-
-.aside .mobile-nav {
-    display: none;
-}
-
-#main-container {
-    width: 100%;
-    overflow-y: auto;
-}
-
-.main-section {
-    margin-left: 250px;
-    min-height: calc(100vh - 150px);
-    padding-top: 110px;
-
-
-
-}
-
-.main-section .row {
-    justify-content: space-evenly;
+.row {
+    display: flex;
     flex-wrap: wrap;
-    /* Sistemare classe col- gestire responsive */
+    margin-right: -10px;
+    margin-left: -10px;
+}
 
+.col {
+    width: calc((100% / 6) - 20px);
+    margin: 10px;
+    text-align: center;
 
 }
 
-/* 
-    SIDE- NAV-BAR
-*/
+/* MACRO */
 
-.row.aside {
-    height: calc(100vh);
-}
-
-
-
-.side-nav {
-    width: 250px;
-    height: calc(100vh);
-    padding: 10px 20px;
-    background-color: black;
-    color: white;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-}
-
-.side-nav a {
-    color: gray;
-    text-decoration: none;
-    display: block;
-    padding: 10px;
-}
-
-.side-nav ul:first-of-type>li:first-of-type a {
-    color: white;
-
-}
-
-.side-nav ul {
-    list-style: none;
-
-}
-
-.side-nav ul li {
-    margin: 20px 0;
+#upper {
+    height: calc(100vh - var(--lower-height));
     display: flex;
-    align-items: center;
 }
 
-.side-nav .nav-add-playlist li i {
-    margin-right: 10px;
-
-
+#upper>aside {
+    width: var(--aside-width);
 }
 
-.nav-playlist-container .nav-add-playlist li a {
-
-    color: gray;
-
-}
-
-
-.side-nav ul li img {
-    width: 40px;
-}
-
-.side-nav ul li a {
-    color: gray;
-    font-size: 1.2rem;
-    font-weight: bold;
-    text-decoration: none;
-    display: block;
-    padding: 5px;
-
-}
-
-
-
-.side-nav .nav-playlist-name a {
-    color: grey;
-}
-
-.side-nav .nav-playlist-container.row {
-    flex-direction: column;
-    max-height: 400px;
-
-}
-
-.side-nav .container.row {
-    flex-direction: column;
-    max-height: 100%;
+#upper>main {
+    width: calc(100% - var(--aside-width));
     overflow-y: auto;
+    background-color: #141922;
 }
 
-
-
-/* 
-    FOOTER- TOOL BAR
-*/
-
-footer {
-    width: 100%;
-    height: 150px;
-    color: white;
-    background-color: #282828;
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    z-index: 2;
+#upper>main>* {
+    margin-bottom: 20px;
 }
 
-footer .row {
-    justify-content: space-between;
-
-}
-
-footer .row .footer {
-    padding: 10px;
-    height: 150px;
+#lower {
+    height: var(--lower-height);
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
-
-
-}
-
-footer .row .footer>* {
-    margin: 0 10px;
-
-    /* non te lo scordare */
-
-}
-
-footer .row .footer .img-container {
-    width: 100px;
-
+    justify-content: space-between;
 }
 
 
-footer .row .button {
-    display: inline-block;
-    color: grey;
-    background-color: #282828;
-    margin: 0 10px;
-    /* NON TE LO SCORDARE */
+/* MAIN */
 
+#upper>main>header {
+    text-align: right;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: sticky;
+    top: 0;
+    margin-bottom: 10px;
+    padding: 20px 10px;
 }
 
-footer .row .footer-left a {
+#upper>main nav>ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+#upper>main nav>ul>li>a {
     color: gray;
     text-decoration: none;
+    text-transform: uppercase;
     display: inline-block;
-    padding: 2px 0;
-    ;
+    padding: 5px 10px;
 
 }
 
 
-/* EFFECTS */
 
-.side-nav ul li a:hover {
+main .container h2 {
+    margin-bottom: 5px;
+    font-size: 2rem;
+    line-height: 2.5rem;
+}
+
+main .container p {
+    color: gray;
+}
+
+main>.container:last-of-type img {
+    border-radius: 50%;
+}
+
+main header>a {
+    display: inline-block;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding: 5px 30px;
     color: white;
+    border: 1px solid white;
+    border-radius: 50px;
+
+}
+
+/* FOOTER */
+
+#lower .footer-left>img {
+    width: 50px;
+
+}
+
+#lower .footer-left {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+#lower .footer-left>* {
+    margin-left: 10px;
+
+}
+
+#lower .footer-left>div>a {
+    font-size: 0.5rem;
+    color: gray;
+    text-decoration: none;
+    display: block;
+
+}
+
+#lower .footer-left .btn-box {
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+#lower .footer-left .btn-box>* {
+    margin-left: 5px;
+
+}
+
+#lower .footer-middle>div {
+    text-align: center;
+
+}
+
+
+#lower .footer-middle>div:first-of-type {
+    height: 50%;
 
 
 }
 
-.side-nav .nav-playlist-name a:hover {
-    color: white;
-}
+#middle-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 0;
 
-footer .row .footer-left a:hover {
-    color: white;
-    text-decoration: underline;
-}
-
-footer .row .footer-left .button:hover {
-    color: white;
 
 }
 
+#middle-top>* {
 
+    margin: 0 10px;
+
+
+}
 
 /* RESPONSIVE */
 
-@media screen and (max-width: 1100px) {}
+@media screen and (max-width: 1100px) {
 
-@media screen and (max-width: 700px) {}
+    .col {
+        width: calc(25% - 20px);
+
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .col {
+        width: calc(50% - 20px);
+
+    }
+}
 
 @media screen and (max-width: 600px) {
-    .side-nav {
-        width: 100px;
-        text-align: center;
+
+    :root {
+        --aside-width: 50px;
     }
 
-
-    .aside .mobile-nav .main-logo img {
-        width: 40px;
-
+    /* #upper>aside {
+        width: 50px;
     }
 
-    .mobile-nav ul li a {
-        margin: 0 auto;
+    #upper>main {
+        width: calc(100% - 50px);
+        overflow-y: auto;
+    } */
+}
 
-    }
+/* effects */
 
-    .aside .mobile-nav {
-        display: block;
+#lower .footer-left>div>a:hover {
+    color: white;
+    text-decoration: underline;
 
-    }
-
-    .aside .desktop-nav {
-        display: none;
-    }
-
-    header .top-banner {
-        width: calc(100% - 100px);
-        margin-left: 100px;
-
-    }
-
-    .main-section {
-        margin-left: 100px;
-
-    }
-
-    .nav-playlist-container {
-        display: none;
-    }
 }
 
 /* DEBUG */
 
-
-
-.debug main {
-
-    background-color: bisque;
-}
-
-.debug .main-section {
-    background-color: palevioletred;
-    border: 3px dashed red;
-
-}
-
-.debug main {
-
+.debug #upper {
     background-color: lightcoral;
-
 }
 
-/* .debug footer {
+.debug #upper>aside {
+    background-color: lightgreen;
+}
 
+/* .debug #upper>main {
+    background-color: burlywood;
+} */
+
+/* .debug #upper>main>header {
+
+    height: 100px;
+} */
+
+.debug #lower {
     background-color: aqua;
-
-} */
-
-.debug .col-1-6 {
-    min-height: 150px;
-    background-color: blue;
-    border: 3px dashed beige;
 }
 
-/* .debug .side-nav {
-
-    background-color: orange;
-
-} */
-
-
-
-.debug footer .row .col-1-3 {
-
-    border: 3px dashed red;
-
+.debug #lower>* {
+    background-color: orangered;
 }
+
+/* .debug .col {
+    background-color: yellowgreen;
+} */
