--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,38 @@ main header>a {
 
 }
 
+#middle-bottom {
+
+    display: flex;
+    align-items: center;
+
+
+}
+
+#play-bar {
+    display: flex;
+    justify-content: flex-end;
+
+    height: 3px;
+    width: 200px;
+    background-color: white;
+    margin: 0 10px;
+
+
+
+}
+
+#play-bar-gray {
+
+    height: 3px;
+    width: 70%;
+    background-color: gray;
+
+
+
+
+}
+
 /* RESPONSIVE */
 
 @media screen and (max-width: 1100px) {
