--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ img {
 
 #upper>aside {
     width: var(--aside-width);
+    padding: 15px;
 }
 
 #upper>main {
@@ -75,6 +76,107 @@ img {
     justify-content: space-between;
     background-color: #282828;
 }
+
+/* SIDE-NAV */
+
+
+
+#upper .side-nav .main-logo a {
+    display: inline-block;
+}
+
+#upper .side-nav .main-logo img {
+    height: 40px;
+
+}
+
+.side-nav ul:first-of-type>li:first-of-type a {
+    color: white;
+
+}
+
+.side-nav ul {
+    list-style: none;
+
+}
+
+
+.side-nav .nav-add-playlist li i {
+    margin-right: 10px;
+
+
+}
+
+.nav-playlist-container .nav-add-playlist li a {
+
+    color: gray;
+
+}
+
+
+.side-nav ul li a img {
+    width: 30px;
+}
+
+.side-nav ul li a {
+    color: gray;
+    font-weight: bold;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+
+}
+
+/* NAV PLAYLIST---DA RIVEDERE */
+.side-nav.desktop-nav .nav-playlist>ul>li>a {
+    color: gray;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 5px;
+
+}
+
+.side-nav.desktop-nav a {
+    color: gray;
+    font-weight: bold;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+
+}
+
+
+.side-nav.desktop-nav>a>i {
+
+    margin-right: 5px;
+
+
+}
+
+.side-nav.desktop-nav>h4 {
+    padding: 5px;
+    text-transform: uppercase;
+
+
+}
+
+
+
+/* .side-nav .nav-playlist-name a {
+    color: grey;
+}
+
+.side-nav .nav-playlist-container.row {
+    flex-direction: column;
+    max-height: 400px;
+    
+
+} */
+
+
+/* /SIDE-NAV */
 
 
 /* MAIN */
@@ -170,6 +272,11 @@ main header>a {
 
 }
 
+#middle-top {
+    padding: 10px 0;
+
+}
+
 #lower .footer-middle>div {
     text-align: center;
 
@@ -196,6 +303,7 @@ main header>a {
     margin: 0 10px;
 
 
+
 }
 
 #middle-bottom {
@@ -207,12 +315,13 @@ main header>a {
 }
 
 /* sotto i 570px si scassa */
+
 /* PLAY BAR?? */
 .play-bar {
     display: flex;
     justify-content: flex-end;
     height: 3px;
-    width: 150px;
+    min-width: 150px;
     background-color: white;
     margin: 0 10px;
 
