prova overlay--non funziona

--- a/css/style.css
+++ b/css/style.css
@@ -248,7 +248,31 @@ aside #aside-bottom> :first-child {
 
 }
 
+main .container .row .col {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
 
+#overlay {
+    position: absolute;
+    display: none;
+
+
+    /* accrocco--non funziona */
+    width: 100%;
+    height: 100%;
+    flex-grow: 1;
+
+
+    top: 0;
+    left: 0;
+    color: gray;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    vertical-align: middle;
+
+}
 
 main .container h2 {
     margin-bottom: 5px;
@@ -448,6 +472,11 @@ main header>a {
 }
 
 /* effects */
+
+main>.container>.row>.col:hover #overlay {
+    display: block;
+}
+
 aside #aside-top nav ul li a:hover {
 
     color: white;
